# ultimate_newtypes_solutions

./: Cargo.toml  README.md
src/: ex1.rs  ex2.rs  ex3.rs  lib.rs
src/ex3/: password_policy.rs
src/ex3/password_policy/: ascii_character_policy.rs  ascii_charset_policy.rs  impossible_policy.rs  insurmountable_policy.rs  length_policy.rs  no_op_policy.rs  one_emoji_policy.rs
